# rbatis-generator

./: Cargo.toml  README.en.md  README.md
conf/: aibulk.yml  demo.sql  rbatis.yml
src/: Cargo.toml  config.rs  main.rs  permission.rs  schema.rs  utils.rs
src/codegen/: codegen.rs  codegen_entity.rs  codegen_entity_param.rs  codegen_handler.rs  codegen_js_api.rs  codegen_query.rs  codegen_relation.rs  codegen_vue_view.rs  codegen_yaml.rs  mod.rs
src/conf/: app.yml
src/tmpl/: cargo_tmpl.rs  conf_tmpl.rs  main_tmpl.rs  mod.rs  utils_tmpl.rs
src/utils/: mod.rs
