[package]
authors = ["Long <longzou@hotmail.com>"]
edition = "2021"
name = "rbatisgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
env_logger = "0.9.0"
form_urlencoded = "1.0.1"
futures = "0.3.21"
http = "0.2.6"
json = "0.12.4"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde-xml-rs = "0.5.1"
url = "2.2.2"
yaml-rust = "0.4.5"
rbson = "2.0"
log = "0.4"
rand = "0.8.5"
fast_log = "1.3"
substring = "1.4.0"
change-case = "0.2.0"
chrono = "0.4.19"
async-std = "1.7.0"
sqlx = {version="0.5.13", features = ["mysql", "postgres", "runtime-tokio-rustls"] }
rbatis = {version = "3.1.11", features = ["debug_mode"]}
tokio = {version = "1.10", features = ["full", "rt-multi-thread"] }
redis = {version = "0.21.0", features = ["tokio-comp", "connection-manager"]}
